# serializer version: 1
# name: test_inspect
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`",
            "source": "[PWD]/scenarios/example.json",
            "prefix": "example-4287e2f2",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires b>1.0.0",
              "\u2502       \u2502   \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2502   \u251c\u2500\u2500 requires c",
              "    \u2502       \u2514\u2500\u2500 unsatisfied: no versions for package",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-3.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_inspect_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`",
            "source": "[PROJECT_ROOT]/scenarios/example.json",
            "prefix": "example-4287e2f2",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires b>1.0.0",
              "\u2502       \u2502   \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2502   \u251c\u2500\u2500 requires c",
              "    \u2502       \u2514\u2500\u2500 unsatisfied: no versions for package",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-3.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      {
        "scenarios": [
          {
            "name": "example",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "This is an example scenario, in which the user depends on a single package `a` which requires `b`",
            "source": "[PWD]/scenarios/example.json",
            "prefix": "example-4287e2f2",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires b>1.0.0",
              "\u2502       \u2502   \u251c\u2500\u2500 satisfied by b-2.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by b-3.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 b-2.0.0",
              "    \u2502   \u251c\u2500\u2500 requires c",
              "    \u2502       \u2514\u2500\u2500 unsatisfied: no versions for package",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-3.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-only-prereleases",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires any version of package `a` which only has pre-release versions available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-only-prereleases-11aca5f4",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-only-prereleases-in-range",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>0.1.0"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires a version of package `a` which only matches pre-release versions but they did not include a prerelease specifier.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-only-prereleases-in-range-bc409bd0",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>0.1.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-prerelease-and-final-any",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires any version of package `a` has a pre-release version available and an older non-prerelease version.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-prerelease-and-final-any-c18a46ab",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-0.1.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-prerelease-specified-only-final-available",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.2.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.3.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=0.1.0a1"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires a version of `a` with a pre-release specifier and only final releases are available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-prerelease-specified-only-final-available-909404f2",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=0.1.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.1.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.2.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-0.3.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-0.2.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-0.3.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-prerelease-specified-only-prerelease-available",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.2.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.3.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=0.1.0a1"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires a version of `a` with a pre-release specifier and only pre-release releases are available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-prerelease-specified-only-prerelease-available-5c9b204c",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=0.1.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.1.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.2.0a1",
              "\u2502       \u2514\u2500\u2500 satisfied by a-0.3.0a1",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0a1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-0.2.0a1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-0.3.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-prerelease-specified-mixed-available",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.2.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "0.3.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=0.1.0a1"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires a version of `a` with a pre-release specifier and both pre-release and final releases are available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-prerelease-specified-mixed-available-65974a95",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=0.1.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.1.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.2.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-0.3.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0a1",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-0.2.0a1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-0.3.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-multiple-prereleases-kinds",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0b1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0rc1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=1.0.0a1"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires `a` which has multiple prereleases available with different labels.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-multiple-prereleases-kinds-a37dce95",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=1.0.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-1.0.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-1.0.0b1",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0rc1",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0a1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-1.0.0b1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0rc1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-multiple-prereleases-numbers",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a2": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a3": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=1.0.0a1"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires `a` which has multiple alphas available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-package-multiple-prereleases-numbers-4c3655b7",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=1.0.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-1.0.0a1",
              "\u2502       \u251c\u2500\u2500 satisfied by a-1.0.0a2",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0a3",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0a1",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-1.0.0a2",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0a3",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-package-only-prereleases",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires any version of package `a` which only has pre-release versions available.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-transitive-package-only-prereleases-2e76f091",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-0.1.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-0.1.0",
              "\u2502       \u251c\u2500\u2500 requires b",
              "\u2502       \u2502   \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u2514\u2500\u2500 b-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-package-only-prereleases-in-range",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>0.1"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires package `a` which has a dependency on a package which only matches pre-release versions but they did not include a prerelease specifier.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-transitive-package-only-prereleases-in-range-a25044b5",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-0.1.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-0.1.0",
              "\u2502       \u251c\u2500\u2500 requires b>0.1",
              "\u2502       \u2502   \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-package-only-prereleases-in-range-opt-in",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b>0.1"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0a1": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a",
                "b>0.0.0a1"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires package `a` which has a dependency on a package which only matches pre-release versions; the user has opted into allowing prereleases in `b` explicitly.",
            "source": "[PWD]/scenarios/prereleases.json",
            "prefix": "requires-transitive-package-only-prereleases-in-range-opt-in-a8f715bc",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-0.1.0",
              "\u2502   \u2514\u2500\u2500 requires b>0.0.0a1",
              "\u2502       \u2514\u2500\u2500 satisfied by b-0.1.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-0.1.0",
              "\u2502       \u251c\u2500\u2500 requires b>0.1",
              "\u2502       \u2502   \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-1.0.0a1",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-package-does-not-exist",
            "packages": {},
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires any version of package `a` which does not exist.",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-package-does-not-exist-bc7df012",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u2514\u2500\u2500 root",
              "    \u2514\u2500\u2500 requires a",
              "        \u2514\u2500\u2500 unsatisfied: no versions for package"
            ]
          },
          {
            "name": "requires-exact-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==2.0.0"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires an exact version of package `a` but only other versions exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-exact-version-does-not-exist-c275ce96",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==2.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-greater-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "0.1.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>1.0.0"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires a version of `a` greater than `1.0.0` but only smaller or equal versions exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-greater-version-does-not-exist-d34821ba",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>1.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-0.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-less-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "4.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a<2.0.0"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires a version of `a` less than `1.0.0` but only larger versions exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "requires-less-version-does-not-exist-4088ec1b",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a<2.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u251c\u2500\u2500 a-3.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-4.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "transitive-requires-package-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires package `a` but `a` requires package `b` which does not exist",
            "source": "[PWD]/scenarios/requires-does-not-exist.json",
            "prefix": "transitive-requires-package-does-not-exist-63ca5a54",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u251c\u2500\u2500 requires b",
              "            \u2514\u2500\u2500 unsatisfied: no versions for package",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-direct-incompatible-versions",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0",
                "a==2.0.0"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires two incompatible, existing versions of package `a`",
            "source": "[PWD]/scenarios/requires-incompatible-versions.json",
            "prefix": "requires-direct-incompatible-versions-1432ee4c",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a==1.0.0",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires a==2.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-2.0.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 a-2.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-incompatible-with-root-version",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "b==2.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a",
                "b==1.0.0"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires packages `a` and `b` but `a` requires a different version of `b`",
            "source": "[PWD]/scenarios/requires-incompatible-versions.json",
            "prefix": "requires-transitive-incompatible-with-root-version-b3c83bbd",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires b==1.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by b-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires b==2.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by b-2.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 b",
              "    \u251c\u2500\u2500 b-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 b-2.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-transitive-incompatible-with-transitive",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c==1.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "b": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [
                      "c==2.0.0"
                    ],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              },
              "c": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.7",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a",
                "b"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires package `a` and `b`; `a` and `b` require different versions of `c`",
            "source": "[PWD]/scenarios/requires-incompatible-versions.json",
            "prefix": "requires-transitive-incompatible-with-transitive-a35362d1",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u251c\u2500\u2500 requires a",
              "\u2502   \u2502   \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2502   \u2514\u2500\u2500 requires b",
              "\u2502       \u2514\u2500\u2500 satisfied by b-1.0.0",
              "\u251c\u2500\u2500 a",
              "\u2502   \u2514\u2500\u2500 a-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires c==1.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by c-1.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u251c\u2500\u2500 b",
              "\u2502   \u2514\u2500\u2500 b-1.0.0",
              "\u2502       \u251c\u2500\u2500 requires c==2.0.0",
              "\u2502       \u2502   \u2514\u2500\u2500 satisfied by c-2.0.0",
              "\u2502       \u2514\u2500\u2500 requires python>=3.7",
              "\u2514\u2500\u2500 c",
              "    \u251c\u2500\u2500 c-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.7",
              "    \u2514\u2500\u2500 c-2.0.0",
              "        \u2514\u2500\u2500 requires python>=3.7"
            ]
          },
          {
            "name": "requires-python-version-does-not-exist",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=4.0",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0"
              ]
            },
            "environment": {
              "python": "3.7"
            },
            "template": "simple",
            "description": "The user requires a package which requires a Python version that does not exist",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-does-not-exist-d1fc625b",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.7",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==1.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires python>=4.0 (incompatible with environment)"
            ]
          },
          {
            "name": "requires-python-version-less-than-current",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": "<=3.8",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0"
              ]
            },
            "environment": {
              "python": "3.9"
            },
            "template": "simple",
            "description": "The user requires a package which requires a Python version less than the current version",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-less-than-current-48bada28",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.9",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==1.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires python<=3.8 (incompatible with environment)"
            ]
          },
          {
            "name": "requires-python-version-greater-than-current",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0"
              ]
            },
            "environment": {
              "python": "3.9"
            },
            "template": "simple",
            "description": "The user requires a package which requires a Python version greater than the current version",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-greater-than-current-00f79f44",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.9",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==1.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-1.0.0",
              "\u2514\u2500\u2500 a",
              "    \u2514\u2500\u2500 a-1.0.0",
              "        \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)"
            ]
          },
          {
            "name": "requires-python-version-greater-than-current-many",
            "packages": {
              "a": {
                "versions": {
                  "2.0.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.1.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.2.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.3.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.4.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.5.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.1.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.2.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.3.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.4.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.5.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a==1.0.0"
              ]
            },
            "environment": {
              "python": "3.9"
            },
            "template": "simple",
            "description": "The user requires a package which has many versions which all require a Python version greater than the current version",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-greater-than-current-many-b33dc0cb",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.9",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a==1.0.0",
              "\u2502       \u2514\u2500\u2500 unsatisfied: no matching version",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-2.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-2.2.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-2.3.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-2.4.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-2.5.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.1.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.2.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.3.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.4.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u2514\u2500\u2500 a-3.5.0",
              "        \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)"
            ]
          },
          {
            "name": "requires-python-version-greater-than-current-backtrack",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.9",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "4.0.0": {
                    "requires_python": ">=3.12",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a"
              ]
            },
            "environment": {
              "python": "3.9"
            },
            "template": "simple",
            "description": "The user requires a package where recent versions require a Python version greater than the current version, but an older version is compatible.",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-greater-than-current-backtrack-d756219a",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.9",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a",
              "\u2502       \u251c\u2500\u2500 satisfied by a-1.0.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-2.0.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-3.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-4.0.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.9",
              "    \u251c\u2500\u2500 a-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u2514\u2500\u2500 a-4.0.0",
              "        \u2514\u2500\u2500 requires python>=3.12 (incompatible with environment)"
            ]
          },
          {
            "name": "requires-python-version-greater-than-current-excluded",
            "packages": {
              "a": {
                "versions": {
                  "1.0.0": {
                    "requires_python": ">=3.9",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "2.0.0": {
                    "requires_python": ">=3.10",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "3.0.0": {
                    "requires_python": ">=3.11",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  },
                  "4.0.0": {
                    "requires_python": ">=3.12",
                    "requires": [],
                    "sdist": true,
                    "wheel": true,
                    "description": ""
                  }
                }
              }
            },
            "root": {
              "requires_python": ">=3.7",
              "requires": [
                "a>=2.0.0"
              ]
            },
            "environment": {
              "python": "3.9"
            },
            "template": "simple",
            "description": "The user requires a package where recent versions require a Python version greater than the current version, but an excluded older version is compatible.",
            "source": "[PWD]/scenarios/requires-python.json",
            "prefix": "requires-python-version-greater-than-current-excluded-7869d97e",
            "tree": [
              "\u251c\u2500\u2500 environment",
              "\u2502   \u2514\u2500\u2500 python3.9",
              "\u251c\u2500\u2500 root",
              "\u2502   \u2514\u2500\u2500 requires a>=2.0.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-2.0.0",
              "\u2502       \u251c\u2500\u2500 satisfied by a-3.0.0",
              "\u2502       \u2514\u2500\u2500 satisfied by a-4.0.0",
              "\u2514\u2500\u2500 a",
              "    \u251c\u2500\u2500 a-1.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.9",
              "    \u251c\u2500\u2500 a-2.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.10 (incompatible with environment)",
              "    \u251c\u2500\u2500 a-3.0.0",
              "    \u2502   \u2514\u2500\u2500 requires python>=3.11 (incompatible with environment)",
              "    \u2514\u2500\u2500 a-4.0.0",
              "        \u2514\u2500\u2500 requires python>=3.12 (incompatible with environment)"
            ]
          }
        ]
      }
  
    ''',
  })
# ---
# name: test_inspect_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_inspect_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
